--- a/client/package.json
+++ b/client/package.json
@@ -11,21 +11,28 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@tailwindcss/vite": "^4.0.15",
-    "framer-motion": "^12.5.0",
+    "@tailwindcss/vite": "^4.1.2",
+    "@uidotdev/usehooks": "^2.4.1",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.483.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.4.0",
-    "tailwindcss": "^4.0.15"
+    "react-slick": "^0.30.3",
+    "react-tsparticles": "^2.12.2",
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/estree": "^1.0.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
