--- a/client/package.json
+++ b/client/package.json
@@ -11,28 +11,40 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.2",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@types/gsap": "^1.20.2",
     "@uidotdev/usehooks": "^2.4.1",
+    "chart.js": "^4.4.8",
     "framer-motion": "^12.6.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.483.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
+    "react-force-graph": "^1.47.6",
+    "react-force-graph-3d": "^1.26.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.4.0",
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.1.2"
+    "tailwindcss": "^4.1.2",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/chart.js": "^2.9.41",
     "@types/estree": "^1.0.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-slick": "^0.23.13",
+    "@types/three": "^0.175.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
