--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.2",
     "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^12.6.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.483.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/estree": "^1.0.7",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-slick": "^0.23.13",
